<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NoteApp</string>
    <string name="title_activity_edit">Edit Note</string>
    <string name="title_activity_main" translatable="false">NoteApp</string>
    <string name="navigation_drawer_open" tools:ignore="ExtraTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_email_address">Email Address</string>
    <string name="pref_title_display_name">Display Name</string>
    <string name="pref_title_favorite_social">Favorite Social Network</string>



    <string name="note_text">Note text</string>
    <string name="note_title">Note Title</string>
</resources>
