<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.systec.noteapp.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.systec.noteapp.ui.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.systec.noteapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/settingsActivity"
        android:name="com.systec.noteapp.ui.activity.SettingsActivity"
        android:label="settings_activity"
        tools:layout="@layout/settings_activity" />


</navigation>